# sred

./: .clauderc  .gitignore  CHAT_FRONTEND_COMPLETE.md  CLAUDE.md  PHASE_2_PROGRESS.md  PROGRESS.md  RAG_ARCHITECTURE.md  README.md  ROADMAP.md  SENTRY_SETUP.md  apply-rls.sql  docker-compose.yml  fileupload.md  login_response.json  quick-start.bat  register_response.json  setup-database.sql  start-backend.bat  test-everything.bat  test_matters_api.py  test_matters_simple.py
backend/: .dockerignore  .env.example  BACKGROUND_PROCESSING.md  Dockerfile  README.md  activate_user.py  alembic.ini  check_users.py  cleanup_test_doc.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.ps1  start_celery_worker.bat  test_auth.py  test_chat.py  test_email.py  test_embedding_doc.txt  test_embedding_pipeline.py  test_employment_contract.txt  test_manual_pipeline.py  test_password_reset.py  test_semantic_search.py  test_user_profile.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_refresh_tokens_table.py  002_add_password_reset_tokens_table.py  2a8b383d4a6b_add_description_column_to_documents.py  3a06c0baabeb_rename_case_type_to_matter_type_in_.py  5a47b5df3f00_add_ai_summary_to_documents.py  5ea213ee766b_add_plan_limits_table.py  6b43c1e68b68_add_usage_tracking_and_plan_limits.py  719388e67d8c_add_feedback_analytics_tables.py  (+22 more)
backend/app/: main.py
backend/scripts/: admin-cli.ps1  admin-cli.sh  create-database.ps1  setup-python-env.ps1
backend/tests/: README.md  conftest.py  test_auth_password_reset.py  test_hybrid_search.py
(+250 files in other folders)
